css/style.css
/* Common Styles */

@font-face {
    font-family: NeoSansBold;
    src: url("../fonts/NeoSans-Bold.otf");
}

@font-face {
    font-family: NeoSansLight;
    src: url("../fonts/NeoSans-Light.otf");
}

@font-face {
    font-family: NeoSans;
    src: url("../fonts/NeoSans.otf");
}

@font-face {
    font-family: NeoSansMedium;
    src: url("../fonts/NeoSans-Medium.otf");
}

.neosans-bold {
    font-family: "NeoSansBold", sans-serif;
}

.neosans-light {
    font-family: "NeoSansLight", sans-serif;
}

.font-neosans {
    font-family: "NeoSans", sans-serif;
}

body {
    font-family: "Roboto", sans-serif;
    color: #a5a5a5;
    letter-spacing: normal;
}

.h1,
.h2,
.display-4,
.card-title {
    color: #000;
    font-family: "NeoSansBold", sans-serif;
}

.font-xs {
    font-size: 0.94rem;
}

.font-sm {
    font-size: 1.125rem;
}

.font-md {
    font-size: 1.31rem;
}

.font-md-x {
    font-size: 1.4rem;
}

.font-lg {
    font-size: 1.5rem;
}

.font-lg-x {
    font-size: 1.75rem;
}

.font-xl-l {
    font-size: 2rem;
}

.font-xl {
    font-size: 2.2rem;
}

.font-xl-x {
    font-size: 2.6rem;
}

.font-xxl {
    font-size: 5rem;
}

.bg-101 {
    background: url(../img/101@2x.png) center right no-repeat;
    background-size: contain;
}

.bg-black {
    background-color: #000000;
}

.bg-green {
    background-color: #009944;
}

.text-green {
    color: #009944;
}

.opensource-card img {
    max-width: 132px;
}

.banner-apply-btn {
    border-radius: 0.5rem;
    width: 16rem;
}

footer a,
footer a:hover {
    color: #fff;
    text-decoration: none;
}
.challenging-button:hover{
    color: #009944;
    text-decoration: none;
}

footer .list-inline-item a {
    letter-spacing: 1.3rem;
    font-size: 1.3rem;
}

.text-opacity {
    opacity: 0.5;
}

.copyright-text {
    font-size: 0.85rem;
    letter-spacing: 0.1rem;
    opacity: 0.5;
}

/* Navbar style */

button.navbar-toggler {
    border: none;
}

/* Header Styles */

.navbar {
    box-shadow: 0px 4px 8px 2px rgba(17, 17, 17, .06);
}

.header-logo-width{
    width : 100px;
}

.navbar-light .navbar-nav .nav-link {
    color: #9a9a9a;
}

.navbar-light .navbar-nav .active>.nav-link,
.navbar-light .navbar-nav .nav-link:focus,
.navbar-light .navbar-nav .nav-link:hover {
    color: #8dc63f;
}

/* Homepage Mobile view carousel style */

.first-section {
    margin-top: 53px;
}

/* Slider Styles*/

#go-jek-slider .carousel-item .carousel-caption {
    top: 25%;
    right: 30%;
}

#go-jek-slider .carousel-indicators {
    top: 55%;
}

#go-jek-slider .carousel-btn {
    top: 60%;
    font-family: "NeoSansBold";
    z-index: 99;
}

#go-jek-slider .carousel-indicators li {
    width: 1rem;
    height: 1rem;
    border-radius: 100%;
    background-color: #fff;
}

#go-jek-slider .carousel-indicators li.active {
    background-color: #009944;
}

.carousel-btn .btn {
    padding-top: 1px;
    padding-bottom: 1px;
    letter-spacing: 1.5px;
    font-size: 1rem;
}

/*Go-Jek facts*/

.dark-green-bg {
    background-color: #02853c;
}

.light-green-bg {
    background-color: #8dc63f;
}

.rider-bg {
    background-color: #149746;
}

.order-bg {
    background-color: #096538;
}

.developer-bg {
    background-color: #009742;
}

.green-bg{
    background-color: #03ab4e;
}

.egg-bg-color {
    background-color: #0BAC45;
}

.gray-bg {
    background-color: #f2f2f2;
}

.text-gray {
    color: #686868;
}

.numbers-card .card-img-top {
    height: 200px;
}

.numbers-card img {
    max-height: 200px;
}

/*Careers Page styles*/

.background-img {
    background-position: center center;
    background-size: cover;
    background-repeat: no-repeat;
    min-height: 37.2rem;
}

.careers-banner {
    background-image: url(../img/careers-banner-1.png);
}

.go-jek-work {
    background-image: url(../img/go-jek-work.png);
}

.text-black {
    color: #000;
}

.careers-banner-text {
    font-size: 3rem;
}

.relative-position {
    position: relative;
}

.opensource-card {
    border-radius: 1rem;
}

/*Employee Stories Carousel*/

.employee-stories {
    position: relative;
}

.main-carousel {
    z-index: 99;
}

.background-carousel {
    position: absolute;
    top: 30px;
    left: 30px;
}

.background-carousel .carousel {
    background-color: #009944;
}

.background-carousel img {
    visibility: hidden;
}

.carousel-head {
    top: 0;
    padding-top: 0;
}

.emp-testimonial {
    background-color: rgba(0, 0, 0, 0.5);
    right: 0;
    left: 50%;
    bottom: 0;
}

.responsive-caption {
    top: 0;
    padding-top: 0;
}

/*Open source styles Start*/

.opensource-card-title {
    overflow: hidden;
    display: -webkit-box;
    -webkit-line-clamp: 1;
    -webkit-box-orient: vertical;
}

.opensource-card-description {
    overflow: hidden;
    display: -webkit-box;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
}

/*open source styles End*/

/* Tech stack */

.custom-logo-width {
    width: 100px;
}

/* blog style start */

.medium-blog em,
.card-body {
    font-style: normal;
    text-decoration: none;
}

.medium-blog a:hover {
    text-decoration: none;
}

.blog-date a {
    color: #009944;
}

/* Media Queries */

@media only screen and (max-width: 800px) {
    .emp-testimonial {
        font-size: 0.7rem;
    }
    #go-jek-slider .carousel-item .carousel-caption {
        top: 9%;
        right: 30%;
    }
    #go-jek-slider .carousel-indicators {
        top: 55%;
    }
    #go-jek-slider .carousel-btn {
        top: 61%;
        font-family: "NeoSansBold";
        z-index: 99;
    }
}

@media only screen and (max-width: 577px) {
    .opensource-card img,
    .tech-stack img {
        max-width: 100px;
    }
    .go-jek-work-text {
        position: absolute;
        bottom: 0;
        left: 21%;
    }
    .absolute-caption {
        position: absolute;
        bottom: 35%;
        left: 1;
        right: 10%;
    }
    /* .absolute-caption-button{
        position: absolute;
        bottom: 50%;
        left: 1;
        right: 10%;
    } */
    #go-jek-slider .carousel-item .carousel-caption .font-xl {
        font-size: 18px;
    }
}

/* Responsive text */

html {
    font-size: 1rem;
}

/* Small devices (landscape phones, 576px and up) */

@media (max-width: 575px) {
    html {
        font-size: 12px;
    }
    .first-section {
        margin-top: 48px;
    }

    .about-us-container-height{
        height: 1800px;
    }
}

/*  Medium devices (tablets, 768px and up) */

@media (min-width: 768px) {
    html {
        font-size: 14px;
    }
    .second-path {
        position: absolute;
        width: 26%;
        right: 44%;
        top: 21%;
    }
    .third-path {
        position: absolute;
        width: 19%;
        top: 32%;
        right: 12%;
    }
    .fourth-path {
        position: absolute;
        width: 1%;
        right: 36%;
        top: 40%;
    }
    .about-us-container-height{
        height: 1350px;
    }
}

@media (min-width: 1024px) {
    .second-path {
        position: absolute;
        width: 26%;
        right: 44%;
        top: 23%;
    }
    .third-path {
        position: absolute;
        width: 19%;
        top: 35.4%;
        right: 11%;
    }
    .fourth-path {
        position: absolute;
        width: 1%;
        right: 36%;
        top: 44%;
    }
    .about-us-container-height{
        height: 1650px;
    }
}

/*  Extra large devices (large desktops, 1200px and up) */

@media (min-width: 1200px) {
    html {
        font-size: 16px;
    }
    .second-path {
        position: absolute;
        width: 26%;
        right: 44%;
        top: 23%;
    }
    .third-path {
        position: absolute;
        width: 19%;
        top: 37%;
        right: 9%;
    }
    .fourth-path {
        position: absolute;
        width: 1%;
        right: 36%;
        bottom: 60%;
    }
    .about-us-container-height{
        height: 1900px;
    }
}

li {
    color: green;
}

/* About-us */

.first-path {
    position: absolute;
    width: 16%;
    right: 50%;
}

.fifth-path {
    position: absolute;
    width: 1%;
    right: 50%;
    bottom: 0%;
}

.about-us-path-style {
    fill: none;
    stroke: #094;
    stroke-miterlimit: 10;
    stroke-width: 14px;
}



.transition-effect{
    display: none;
}

.transition-effect-text{
    display: none;
}

.first-path{
    stroke-dasharray: 700;
    stroke-dashoffset: 700;
}
.second-path{
    stroke-dasharray: 500;
    stroke-dashoffset: 500;
}
.third-path{
    stroke-dasharray: 400;
    stroke-dashoffset: 400;
}
.fourth-path{
    stroke-dasharray: 200;
    stroke-dashoffset: 200;
}
.fifth-path{
    stroke-dasharray: 200;
    stroke-dashoffset: 200;
}

.fade-right{
    display: none;
}

